Fri Feb 27 15:34:42 GMT 2004 (njh)
----------------------------------
  * docs/man:	Ensure example for milter tallies with clamav-milter/INSTALL
  * clamav-milter:	Ensure INSTALL agrees with man page
	Check if clamd is running on start up (UNIX domain sockets only)

Fri Feb 27 12:23:48 GMT 2004 (njh)
----------------------------------
  * libclamav:	Handle lines just containing ':', thanks to Stefan
	Kaltenbrunner <mm-mailinglist@madness.at> and Trog

Fri Feb 27 10:47:20 CET 2004 (tk)
---------------------------------
  * clamd: --debug: disable limit for a core size under Linux

Fri Feb 27 09:30:20 GMT 2004 (njh)
----------------------------------
  * clamav-milter: Only use TCPwrappers when using TCP/IP to establish
		communications with the milter
	Dropping priv message now same as clamd

Thu Feb 26 22:22:43 CET 2004 (tl)
---------------------------------
  * freshclam:	cleaner and descriptive error messages for
  		daemon notification failures

Thu Feb 26 16:22:59 CET 2004 (tk)
---------------------------------
  * libclamav: detect "From: " (Exim) mail files

Thu Feb 26 13:33:00 GMT 2004 (njh)
----------------------------------
  * libclamav:	Handle spaces at the end of uuencoded lines

Thu Feb 26 11:02:46 GMT 2004 (trog)
-----------------------------------
 * libclamav/readdb.c: close directory descriptor leak - caused
	"CVD extraction failure" error.

Wed Feb 25 11:07:53 GMT 2004 (trog)
-----------------------------------
 * clamd thrmgr: new clean reimplementation

Wed Feb 25 08:57:35 GMT 2004 (trog)
-----------------------------------
  * libclamav/vba_extract.c: add VBA signature for Office 2003

Tue Feb 24 23:56:52 CET 2004 (tk)
---------------------------------
  * doc: sendmail_clamav howto v1.2 by Przemyslaw Holowczyc

Tue Feb 24 10:56:44 CET 2004 (tk)
---------------------------------
  * libclamav: scan mail files modified by Symantec software

Mon Feb 23 22:29:16 GMT 2004 (tl)
---------------------------------