@@ -1,3 +1,7 @@
+Sat Feb 28 13:06:16 CET 2004 (tk)
+---------------------------------
+  * libclamav: readdb: fixed segmentation fault when virus name is empty
+
 Fri Feb 27 15:34:42 GMT 2004 (njh)
 ----------------------------------
   * docs/man:	Ensure example for milter tallies with clamav-milter/INSTALL
